--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Main.Main
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameModeBase.BP_GameModeBase_C
-EditorStartupMap=/Game/Maps/Main.Main
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
